# ansible-collection

./: .gitignore  .ruff.toml  .yamllint.yml  Dockerfile.dev  README.md  Taskfile.yml  galaxy.yml  pyproject.toml  requirements.yml
roles/bat/: README.md
roles/bat/defaults/: main.yml
roles/bat/meta/: main.yml
roles/bat/tasks/: gather-facts.yml  install-packages.yml  main.yml
roles/broot/: README.md
roles/broot/defaults/: main.yml
roles/broot/files/: conf.hjson
roles/broot/meta/: main.yml
roles/broot/tasks/: configuration.yml  gather-facts.yml  install-packages.yml  main.yml
roles/btop/: README.md
roles/btop/defaults/: main.yml
roles/btop/meta/: main.yml
roles/btop/tasks/: gather-facts.yml  install-packages.yml  main.yml
roles/docker/: README.md
roles/docker/defaults/: main.yml
roles/docker/meta/: main.yml
roles/docker/tasks/: configuration.yml  install-packages.yml  main.yml
roles/eza/: README.md
roles/eza/defaults/: main.yml
roles/eza/handlers/: main.yml
roles/eza/meta/: main.yml
roles/eza/tasks/: install-packages.yml  main.yml
roles/eza/tests/: test.yml
roles/eza/vars/: main.yml
roles/fish/: README.md
roles/fish/defaults/: main.yml
roles/fish/meta/: main.yml
roles/fish/tasks/: gather-facts.yml  install-fish-plugins.yml  install-fish.yml  install-fisher.yml  main.yml
roles/fzf/meta/: main.yml
roles/fzf/tasks/: main.yml
roles/git/: README.md
roles/git/defaults/: main.yml
roles/git/meta/: main.yml
roles/git/tasks/: configuration.yml  main.yml
roles/git/templates/: .gitconfig.j2
roles/htop/meta/: main.yml
roles/htop/tasks/: configuration.yml  main.yml
roles/lazydocker/: README.md
roles/lazydocker/defaults/: main.yml
roles/lazydocker/meta/: main.yml
roles/mise/: README.md
roles/tmux/: README.md
(+75 files in other folders)
