[tool.poetry]
name = "ansible-my-collection"
description = "An Ansible Collection of roles."
version = "1.5.0"
license = "MIT"

authors = ["Sergei Aleksandrov <sergei.a.aleks@gmail.com>"]

readme = "README.md"
keywords = [
  "ansible",
  "collection",
  "roles",
  "molecule",
  "linux",
  "debian"
]

homepage = "https://github.com/sjlex/ansible-my-collection"
repository = "https://github.com/sjlex/ansible-my-collection"
documentation = "https://github.com/sjlex/ansible-my-collection/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.13.12"
ansible = "==13.4.0"

[tool.poetry.group.dev.dependencies]
molecule = "==25.12.0"
molecule-plugins = {extras = ["docker", "vagrant"], version = "==25.8.12"}
pytest-testinfra = "==10.1.1"
ansible-lint = "==26.3.0"
yamllint = "==1.38.0"
ruff = "==0.15.5"
black = "==26.3.0"
