[tool.poetry]
name = "ansible-collection"
description = "A personal collection of Ansible roles."
version = "1.7.0"
license = "MIT"
package-mode = false

authors = ["Sergei Aleksandrov <sergei.a.aleks@gmail.com>"]

readme = "README.md"
keywords = [
  "ansible",
  "collection",
  "roles",
  "molecule",
  "linux",
  "debian"
]

homepage = "https://github.com/sjlex/ansible-collection"
repository = "https://github.com/sjlex/ansible-collection"
documentation = "https://github.com/sjlex/ansible-collection/blob/main/README.md"

[tool.poetry.dependencies]
python = "^3.13"
ansible = "==13.4.0"

[tool.poetry.group.dev.dependencies]
molecule = "==25.1.0"
molecule-plugins = {extras = ["docker", "vagrant"], version = "==25.8.12"}
pytest-testinfra = "==10.1.1"
ansible-lint = "==26.3.0"
yamllint = "==1.38.0"
ruff = "==0.15.5"
black = "==26.3.0"
